# AutoDetection-UAV

./: README.md  gitpush.sh
aruco_img/: aruco.txt
src/airsim-ros/: CMakeLists.txt  package.xml
src/airsim-ros/include/: PID.h  airsim_control.hpp  airsim_node.hpp
src/airsim-ros/include/AirLib/api/: DebugApiServer.hpp  RpcLibAdapatorsBase.hpp  RpcLibClientBase.hpp  RpcLibServerBase.hpp  VehicleApiBase.hpp
src/airsim-ros/include/AirLib/common/: AirSimSettings.hpp  ClockBase.hpp  CommonStructs.hpp  ImageCaptureBase.hpp  ScalableClock.hpp  Settings.hpp  SteppableClock.hpp
src/airsim-ros/include/AirLib/controllers/: VehicleConnectorBase.hpp
src/airsim-ros/include/AirLib/physics/: DebugPhysicsBody.hpp  PhysicsWorld.hpp
src/airsim-ros/include/AirLib/sensors/: SensorFactory.hpp
src/airsim-ros/include/AirLib/sensors/Distance/: DistanceBase.hpp  DistanceSimple.hpp  DistanceSimpleParams.hpp
src/airsim-ros/include/AirLib/vehicles/car/api/: CarApiBase.hpp  CarRpcLibAdapators.hpp  CarRpcLibClient.hpp  CarRpcLibServer.hpp
src/airsim-ros/include/AirLib/vehicles/multirotor/: MultiRotor.hpp  MultiRotorParams.hpp  MultiRotorParamsFactory.hpp
src/airsim-ros/include/AirLib/vehicles/multirotor/api/: MultirotorApi.hpp  MultirotorRpcLibAdapators.hpp  MultirotorRpcLibClient.hpp  MultirotorRpcLibServer.hpp  StandAloneSensors.hpp
src/airsim-ros/include/AirLib/vehicles/multirotor/configs/: Px4MultiRotor.hpp  RosFlightQuadX.hpp  SimpleFlightQuadX.hpp
src/airsim-ros/include/AirLib/vehicles/multirotor/controllers/: DroneCommon.hpp  DroneControllerBase.hpp  MavLinkDroneController.hpp  RealMultirotorConnector.hpp
src/airsim-ros/include/AirLib/vehicles/multirotor/firmwares/ros_flight/: AirSimRosFlightBoard.hpp  AirSimRosFlightCommLink.hpp  RosFlightDroneController.hpp
src/airsim-ros/include/AirLib/vehicles/multirotor/firmwares/ros_flight/firmware/: board.hpp  commlink.hpp  commonstate.hpp  controller.hpp  dummyboard.hpp  dummycommlink.hpp  estimator.hpp  firmware.hpp  mixer.hpp  mode.hpp  mux.hpp  param.hpp  rc.hpp  sensors.hpp
src/airsim-ros/include/AirLib/vehicles/multirotor/firmwares/simple_flight/: AirSimSimpleFlightBoard.hpp  AirSimSimpleFlightEstimator.hpp  SimpleFlightDroneController.hpp
src/airsim-ros/include/AirLib/vehicles/multirotor/firmwares/simple_flight/firmware/: AdaptiveController.hpp  AngleLevelController.hpp  AngleRateController.hpp  OffboardApi.hpp  Params.hpp  RemoteControl.hpp  RungKuttaPidIntegrator.hpp  StdPidIntegrator.hpp  VelocityController.hpp
src/airsim-ros/include/AirLib/vehicles/multirotor/firmwares/simple_flight/firmware/interfaces/: CommonStructs.hpp  IOffboardApi.hpp  IPidIntegrator.hpp  IStateEstimator.hpp
src/airsim-ros/launch/: control.launch  data_recv.launch  image.launch  runall.launch
src/airsim-ros/src/: airsim_barometer.cpp  airsim_control.cpp  airsim_control2.1.cpp  airsim_control2.cpp  airsim_control3.cpp  airsim_gps.cpp  airsim_image_down.cpp  airsim_image_front_depth.cpp  airsim_image_front_rgb.cpp  airsim_imu.cpp  airsim_magnetic.cpp  airsim_node.cpp  airsim_test.cpp  main.cpp  main2.cpp  main3.cpp
src/gf_detection/: CMakeLists.txt  package.xml
src/gf_detection/include/: image_matching.hpp  image_matching_front.hpp  num_detect.hpp
src/gf_detection/launch/: a.launch
src/gf_detection/src/: aruco.py  c.py  circle.py  front_cam_detection.cpp  image_depth2.cpp  image_down.cpp  image_front.cpp  image_matching.cpp  image_matching_front.cpp  img.py  lsd.py  num_detect.cpp  number.py  record.cpp
src/gf_perception/: CMakeLists.txt  package.xml
src/gf_perception/msg/: Object.msg  ObjectList.msg
src/gf_perception/scripts/: gaofen.py  gaofentest.py
src/gf_perception/scripts/config/: config.py  kitti_squeezeDet_config.py
src/imu_filter_madgwick/launch/: madgwick.launch
src/imu_filter_madgwick/src/: imu_filter_ros.cpp
